# tasker_msgs

./: CMakeLists.txt  package.xml
msg/: CMD.msg  RobotResource.msg  ScheduleParams.msg  ShdlData.msg  ShdlDataStamped.msg  Status.msg  TaskState.msg
srv/: CostConditions.srv  HoldConditions.srv  LaunchConditions.srv  SchedulingConditions.srv  StartTask.srv  SuspendConditions.srv  TaskRequest.srv
